<resources>
    <string name="app_name">Dzah</string>

    <!-- commons -->
    <string name="commons_img_tips">图片提示</string>

    <!-- Notification -->
    <string name="notification_title">通知标题</string>
    <string name="notification_text">通知内容</string>
    <string name="notification_icon">通知图标</string>

    <!-- sample -->
    <!-- Basic Gesture Detect -->
    <string name="gesture_detect_intro_msg">
        <![CDATA[
            欢迎来到基本手势检测！
            为了试验该示例，请在文本上进行拖动或按下的操作，看看发生了什么？
        ]]>
    </string>
    <!-- log -->
    <string name="log_clear_text">消除文本</string>

    <!-- api demos -->
    <string name="tab_host1_tv1">tab1</string>
    <string name="tab_host1_tv2">tab2</string>
    <string name="tab_host1_tv3">tab3</string>

    <!-- files -->
    <string name="internal_storage_root_path">获取内部存储根目录</string>
    <string name="internal_storage_cache_path">获取内部存储缓存目录</string>
    <string name="internal_storage_create_file">使用文本框内容创建内部文件</string>
    <string name="internal_storage_temp_path">创建临时文件</string>
    <string name="external_storage_public_path">获取外部存储公共目录</string>
    <string name="external_storage_private_path">获取外部存储私有目录</string>
    <string name="random_generate_contact">随机生成联系人</string>
    <string-array name="external_storage_dir_type">
        <item>根目录</item>
        <item>闹钟</item>
        <item>相机</item>
        <item>文档</item>
        <item>下载</item>
        <item>电影</item>
        <item>音乐（声音）</item>
        <item>通知（声音）</item>
        <item>图片</item>
        <item>明信片（声音）</item>
        <item>铃声（声音）</item>
    </string-array>
    <string name="tui_cool_article_title">首页</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="pre_picture">上一张</string>
    <string name="next_picture">下一张</string>
    <string name="start_basic_service">启动基本服务</string>
    <string name="stop_basic_service">停止基本服务</string>
    <string name="start_intent_service">启动 IntentService</string>
    <string name="stop_intent_service">停止 IntentService</string>
    <string name="res_show">收到服务发送来的消息为：\n</string>
    <string name="input_user_name">请输入用户名</string>
    <string name="input_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="error_username">用户名格式输入错误</string>
    <string name="error_password">密码格式输入错误</string>
    <string name="mvp_msg">位置 %d 被点击</string>
</resources>
