<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <Button
        android:id="@+id/root_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/internal_storage_root_path"/>
    <TextView
        android:id="@+id/root_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/cache_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/internal_storage_cache_path"/>
    <TextView
        android:id="@+id/cache_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/create_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/internal_storage_create_file"/>
    <EditText
        android:id="@+id/create_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/temp_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/internal_storage_temp_path"/>
    <TextView
        android:id="@+id/temp_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>